tests/error/compile/var_paren_in_key.wks
# @desc: Invalid character in variable name
# @expect-error: Variable name contains ')'

# Test variable name containing ')' error
:var "bad)" "value"
a "Test" +write %{{echo test}}
